hard-gists/36c31a9b653779b2b7d1/run.log
=== Docker Run Log for 36c31a9b653779b2b7d1 ===
Started at: Mi 29. Okt 13:57:14 CET 2025

[2025-10-29 13:57:14] START: Running container for 36c31a9b653779b2b7d1
[2025-10-29 13:57:14] SUCCESS: Container cfe445a524167a4e85d3f752d37a701f073df40bb359f89836aebec1a3bb2724 started for 36c31a9b653779b2b7d1
=== Container logs for 36c31a9b653779b2b7d1 ===
  File "/snippet.py", line 17
    print 'Usage:', sys.argv[0], \
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 36c31a9b653779b2b7d1 ===
[2025-10-29 13:57:16] INFO: Container cfe445a524167a4e85d3f752d37a701f073df40bb359f89836aebec1a3bb2724 has stopped
